--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -71,7 +71,11 @@ a{
 }
 .mainImg{
     width: 410px;
-    margin-left: 200px;
+    margin-left: 15%;
+    position: absolute;
+}
+.mainButtons{
+    margin-top: 50px;
 }
 button{
     width: 125px;
